--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
