--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.19",
     "gh-pages": "^6.1.1",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
